--- a/demo/src/main/resources/styles.css
+++ b/demo/src/main/resources/styles.css
@@ -1,5 +1,44 @@
-h1 {
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+*{
+    font-family: 'Lato', sans-serif;
+}
+.titulo{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 10px;
     padding: 10px;
 }
+
+
+header {
+    padding: 20px;
+    text-align: center;
+}
+
+h3 {
+    margin-bottom: 0; 
+}
+
+
+
+.form{
+    margin: 10px 0 10px 0;
+}
+.card{
+    margin: 10px;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+   
+    
+}
+
+.card-body{
+    background-color: #D9D9D9;
+
+}
+
+header{
+    background-color: #D9D9D9;
+    margin-bottom: 20px;
+}
+
