--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <main>
         <section class="container">
             <h1>Sitio de reclamos</h1>
-            <form id="login-form" method="post" >
+            <form id="login-form"  method="post"  onsubmit="submitForm(event)">
                 <div class="mb-3">
                     <label for="nombreUsuario" class="form-label">Nombre de Usuario:</label>
                     <input type="text" class="form-control" id="nombreUsuario" name="nombreUsuario" required>
@@ -45,16 +45,18 @@
                         <option value="dueno_inquilino">Dueño/Inquilino</option>
                     </select>
                 </div>
-                <div class="mb-3" style="display: none;" id="edif-selection">
+                <div class="mb-3" id="edif-selection">
                     <label for="user-type" class="form-label">Selecione su Edificio</label>
                     <select class="form-select" id="edif_type" name="user-type" required>
-                        <!-- llenar con edificios -->
+                            <option >Torres Palcos</option>
+                            <option >Edificio Alamur</option>
                     </select>
                 </div>
                 <div class="mb-3" id="unit-selection" style="display: none;">
                     <label for="user-unit" class="form-label">Selecciona tu unidad:</label>
                     <select class="form-select" id="unit-list" name="unit-list">
-                        <!-- llenar con unidades -->
+                        <option >Unidad 102</option>
+                        <option >Unidad 342</option>
                     </select>
                 </div>
                 <div class="d-grid gap-2 mb-3">
@@ -64,6 +66,7 @@
         </section>
             
     </main>
+    
     <script src="/demo/src/main/resources/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
