--- a/demo/src/main/resources/templates/misReclamos.html
+++ b/demo/src/main/resources/templates/misReclamos.html
@@ -4,77 +4,145 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Reclamos</title>
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <main>
-        <header>
+        <header class=" header">
             <!--Bienvenido nombre (react)-->
-            <h3>MisReclamos</h3>
-            <div class="container">
-                <label for="filter-state">Filtrar por Estado:</label>
-                <select id="filter-state" onchange="filterCards()">
-                    <option value="todos">Todos</option>
-                    <option value="ab">Abierto</option>
-                    <option value="des">Desestimado</option>
-                    <option value="pro">En proceso</option>
-                    <option value="term">Terminado</option>
-                </select>
-                <button type="button" class="btn btn-primary" onclick="">Nuevo Reclamo</button>
-            </div>
+            <h2 class="titulo">Bienvenido!</h2>
+            <h2 class="titulo">Mis Reclamos</h2>
+            
         </header>
-        <section>
-            <form id="newreclamo-form" style="display: none;">
-                <h1>id: generado en bs</h1>
-                <div class="form-check form-check-inline" required onchange="toggleSelection()">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="unidad">
-                    <label class="form-check-label" for="inlineRadio1">Unidad</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="aC">
-                    <label class="form-check-label" for="inlineRadio2">Area Comun</label>
-                </div>
-                <div class="mb-3" id="aC-selection" style="display: none;">
-                    <label for="uC-unit" class="form-label">Selecciona Area Comun</label>
-                    <select class="form-select" id="aC-list" name="aC-list">
-                        <!-- llenar con unidades -->
+        <div class="container text-center">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-6 p-2">
+                    <select class="form-select" onchange="filterCards()">
+                        <option value="todos">Todos</option>
+                        <option value="ab">Abierto</option>
+                        <option value="des">Desestimado</option>
+                        <option value="pro">En proceso</option>
+                        <option value="term">Terminado</option>
                     </select>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Descripcion:</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <div class="col-md-6 p-2">
+                    <button type="button" class="btn btn-secondary" onclick="toggleForm()">Nuevo Reclamo</button>
                 </div>
-                <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">Agregar imagenes:</label>
-                    <input class="form-control" type="file" id="formFileMultiple" multiple>
-                  </div>
-                <div class="d-grid gap-2 mb-3">
-                    <button type="submit" class="btn btn-success">Registrarlo</button>
-                </div>
-            </form>
+            </div>
+        </div>
+         
+        <section>
+            <div class="container form">
+                <form id="newreclamo-form" style="display: none;">
+                    <h4 class="titulo">Tipo de Reclamo</h4>
+                    <div class="mb-3 d-flex justify-content-center">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="unidad" onchange="toggleSelection()">
+                            <label class="form-check-label" for="inlineRadio1">Unidad</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="aC" onchange="toggleSelection()">
+                            <label class="form-check-label" for="inlineRadio2">Área Común</label>
+                        </div>
+                    </div>
+            
+                    <div class="mb-3" id="aC-selection" style="display: none;">
+                        <label for="aC-list" class="form-label">Selecciona Área Común:</label>
+                        <select class="form-select" id="aC-list" name="aC-list">
+                            <option >Plaza</option>
+                            <option >Piler</option>
+                            <!-- llenar con opciones de áreas comunes -->
+                        </select>
+                    </div>
+            
+                    <div class="mb-3" id="unit-selection" style="display: none;">
+                        <label for="unit-list" class="form-label">Selecciona tu Unidad:</label>
+                        <select class="form-select" id="unit-list" name="unit-list">
+                            <!-- llenar con opciones de unidades -->
+                            <option >Unidad 102</option>
+                            <option >Unidad 342</option>
+                        </select>
+                    </div>
+            
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Descripción:</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+            
+                    <div class="mb-3">
+                        <label for="formFileMultiple" class="form-label">Agregar imágenes:</label>
+                        <input class="form-control" type="file" id="formFileMultiple" multiple>
+                    </div>
+            
+                    <div class="d-grid gap-2 mb-3">
+                        <button type="submit" class="btn btn-success" onclick="registrarReclamo()">Registrar Reclamo</button>
+                    </div>
+                </form>
+            </div>
+            
         </section>
-        <section class="container cards">
-            <!--aca cards desde base de datos-->
-            <div class="card" style="width: 18rem;" data-estado="ab">
-                <div class="card-body">
-                    <h5 class="card-title">ID:</h5>
-                    <h6>Unidad:</h6>
-                    <h6>Descripción</h6>
-                    <h6>Estado: Activo</h6>
+        <section class="container ">
+            <div class="row justify-content-center" id="tarjetas">
+                <!--aca cards desde base de datos-->
+                <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                    <div class="card-body">
+                        <h5 class="card-title">ID: 1</h5>
+                        <h6>Número de Unidad: 101</h6>
+                        <h6>Descripción del Reclamo</h6>
+                        <h6>Estado: Activo</h6>
+                    </div>
                 </div>
-            </div>
-    
-            <div class="card" style="width: 18rem;" data-estado="des">
-                <div class="card-body">
-                    <h5 class="card-title">ID:</h5>
-                    <h6>Unidad:</h6>
-                    <h6>Descripción</h6>
-                    <h6>Estado: Inactivo</h6>
+            
+                <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="des">
+                    <div class="card-body">
+                        <h5 class="card-title">ID: 2</h5>
+                        <h6>Número de Unidad: 102</h6>
+                        <h6>Descripción del Reclamo</h6>
+                        <h6>Estado: Inactivo</h6>
+                    </div>
                 </div>
-            </div>
+            
+                <!-- Agregar más tarjetas según sea necesario -->
+                <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="pro">
+                    <div class="card-body">
+                        <h5 class="card-title">ID: 3</h5>
+                        <h6>Número de Unidad: 103</h6>
+                        <h6>Descripción del Reclamo</h6>
+                        <h6>Estado: En proceso</h6>
+                    </div>
+                </div>
+            
+                <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="term">
+                    <div class="card-body">
+                        <h5 class="card-title">ID: 4</h5>
+                        <h6>Número de Unidad: 104</h6>
+                        <h6>Descripción del Reclamo</h6>
+                        <h6>Estado: Terminado</h6>
+                    </div>
+                </div>
+            
+                <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                    <div class="card-body">
+                        <h5 class="card-title">ID: 5</h5>
+                        <h6>Número de Unidad: 105</h6>
+                        <h6>Descripción del Reclamo</h6>
+                        <h6>Estado: Activo</h6>
+                    </div>
+                </div>
+            
+                <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="des">
+                    <div class="card-body">
+                        <h5 class="card-title">ID: 6</h5>
+                        <h6>Número de Unidad: 106</h6>
+                        <h6>Descripción del Reclamo</h6>
+                        <h6>Estado: Inactivo</h6>
+                    </div>
+                </div>
+            </div>    
         </section>
     </main>
-    <script src="/demo/src/main/resources/script.js"></script>
+    <script src="../script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
