--- a/demo/src/main/resources/templates/reclamos2.html
+++ b/demo/src/main/resources/templates/reclamos2.html
@@ -4,93 +4,208 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reclamos</title>
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <header>
+        <header class=" header">
             <!--Bienvenido nombre (react)-->
-            <div class="mb-3" id="edif-select">
-                <label for="user-type" class="form-label">Selecione Edificio</label>
-                <select class="form-select" id="edif_type" name="user-type" required>
-                    <!-- llenar con edificios -->
-                </select>
-            </div>
-            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                <label class="btn btn-outline-primary" for="btnradio1">Reclamos</label>
-              
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio2">Unidades</label>
-              
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio3">Registros</label>
-            </div>
+            <h2 class="titulo">Admistrador </h2>
+            <div class="row justify-content-center">
+                <div class="btn-group " role="group" aria-label="Basic radio toggle button group">
+                    <input type="radio" class="btn-check " name="btnradio" id="btnradio1" autocomplete="off" checked onchange="toggleDiv('div1')">
+                    <label class="btn btn-outline-secondary" for="btnradio1">Reclamos</label>
+                
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" onchange="toggleDiv('div2')">
+                    <label class="btn btn-outline-secondary" for="btnradio2">Unidades</label>
+                
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" onchange="toggleDiv('div3')">
+                    <label class="btn btn-outline-secondary" for="btnradio3">Registros</label>
 
-
-        
+                    <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off" onchange="toggleDiv('div4')">
+                    <label class="btn btn-outline-secondary" for="btnradio4">Areas Comunes</label>
+                </div>
+            </div>
         </header>
     </header>
     <main>
         <section>
             <!--mostrar q  (react)-->
-            <div class="container">
-                <label for="filter-state">Filtrar por Estado:</label>
-                <select id="filter-state" onchange="filterCards()">
-                    <option value="todos">Todos</option>
-                    <option value="ab">Abierto</option>
-                    <option value="des">Desestimado</option>
-                    <option value="pro">En proceso</option>
-                    <option value="term">Terminado</option>
-                </select>
-                <button type="button" class="btn btn-primary" onclick="">Modificar Reclamo</button>
+            <div id="div1">
+                <div class="container text-center">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-md-6 p-2">
+                            <select class="form-select" onchange="filterCards()">
+                                <option value="todos">Todos</option>
+                                <option value="ab">Abierto</option>
+                                <option value="des">Desestimado</option>
+                                <option value="pro">En proceso</option>
+                                <option value="term">Terminado</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6 p-2">
+                            <button type="button" class="btn btn-secondary" onclick="ToggleMofif()">Modificar Reclamo</button>
+                            
+                        </div>
+                    </div>
+                </div>
+                    
+                <form id="modif_reclamo-form" style="display: none;">
+                    <div class="mb-3">
+                        <label for="ID-TYPE" class="form-label">ID:</label>
+                        <select class="form-select" id="user-type" name="user-type" required >
+                            <option value="" disabled selected>Selecciona ID</option>
+                            <option >Unidad 102</option>
+                            <option >Unidad 342</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="estado-TYPE" class="form-label">Cambiar estado</label>
+                        <select class="form-select" id="user-type" name="user-type" required >
+                            <option value="ab">Abierto</option>
+                            <option value="des">Desestimado</option>
+                            <option value="pro">En proceso</option>
+                            <option value="term">Terminado</option>
+                        </select>
+                    </div>
+                    <div class="d-grid gap-2 mb-3">
+                        <button type="submit" class="btn btn-success">Guardarlo</button>
+                    </div>
+                </form>
+                <div class="row justify-content-center" id="tarjetas">
+                    <!--aca cards desde base de datos-->
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                        <div class="card-body">
+                            <h5 class="card-title">ID: 1</h5>
+                            <h6>Número de Unidad: 101</h6>
+                            <h6>Descripción del Reclamo</h6>
+                            <h6>Estado: Activo</h6>
+                        </div>
+                    </div>
+                
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="des">
+                        <div class="card-body">
+                            <h5 class="card-title">ID: 2</h5>
+                            <h6>Número de Unidad: 102</h6>
+                            <h6>Descripción del Reclamo</h6>
+                            <h6>Estado: Inactivo</h6>
+                        </div>
+                    </div>
+                
+                    <!-- Agregar más tarjetas según sea necesario -->
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="pro">
+                        <div class="card-body">
+                            <h5 class="card-title">ID: 3</h5>
+                            <h6>Número de Unidad: 103</h6>
+                            <h6>Descripción del Reclamo</h6>
+                            <h6>Estado: En proceso</h6>
+                        </div>
+                    </div>
+                
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="term">
+                        <div class="card-body">
+                            <h5 class="card-title">ID: 4</h5>
+                            <h6>Número de Unidad: 104</h6>
+                            <h6>Descripción del Reclamo</h6>
+                            <h6>Estado: Terminado</h6>
+                        </div>
+                    </div>
+                
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                        <div class="card-body">
+                            <h5 class="card-title">ID: 5</h5>
+                            <h6>Número de Unidad: 105</h6>
+                            <h6>Descripción del Reclamo</h6>
+                            <h6>Estado: Activo</h6>
+                        </div>
+                    </div>
+                
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="des">
+                        <div class="card-body">
+                            <h5 class="card-title">ID: 6</h5>
+                            <h6>Número de Unidad: 106</h6>
+                            <h6>Descripción del Reclamo</h6>
+                            <h6>Estado: Inactivo</h6>
+                        </div>
+                    </div>
+                </div>  
             </div>
-            <form id="modif_reclamo-form" style="display: none;">
-                <div class="mb-3">
-                    <label for="ID-TYPE" class="form-label">ID:</label>
-                    <select class="form-select" id="user-type" name="user-type" required >
-                        <option value="" disabled selected>Selecciona ID</option>
-                         <!-- llenar con ids -->
-                    </select>
+            <div id="div2">
+                <div class="row justify-content-center" id="tarjetas">
+                    <!--aca cards desde base de datos-->
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                        <div class="card-body">
+                            <h5 class="card-title">Número de Unidad: 101</h5>
+                            <h6>Piso: 6</h6>
+                            <h6>Estado: Habitada</h6>
+                            <h6>Dueño: Candela</h6>
+                            <h6>Inquilino: x</h6>
+                            <h6>Habitantes: Candela, Nicolas</h6>
+                        </div>
+                    </div>
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Número de Unidad: 134</h5>
+                            <h6>Piso: 3</h6>
+                            <h6>Estado: Habitada</h6>
+                            <h6>Dueño: Martina</h6>
+                            <h6>Inquilino: Jimin</h6>
+                            <h6>Habitantes: Jimin, Martina</h6>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="mb-3">
-                    <label for="estado-TYPE" class="form-label">Cambiar estado</label>
-                    <select class="form-select" id="user-type" name="user-type" required >
-                        <option value="" disabled selected>muestra el estado en q esta</option>
-                        <option value="ab">Abierto</option>
-                        <option value="des">Desestimado</option>
-                        <option value="pro">En proceso</option>
-                        <option value="term">Terminado</option>
-                    </select>
+
+
+
+            </div>
+            <div id="div3">
+                <div class="row justify-content-center" id="tarjetas">
+                    <!--aca cards desde base de datos-->
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                        <div class="card-body">
+                            <h5 class="card-title">Registro 1</h5>
+                            
+                        </div>
+                    </div>
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Registro 2</h5>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="d-grid gap-2 mb-3">
-                    <button type="submit" class="btn btn-success">Guardarlo</button>
+            </div>
+            <div id="div4">
+                <div class="row justify-content-center" id="tarjetas">
+                    <!--aca cards desde base de datos-->
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;" data-estado="ab">
+                        <div class="card-body">
+                            <h5 class="card-title">Pileta</h5>
+                            <h6>Piso: 7</h6>
+                        </div>
+                    </div>
+                    <div class="card filtrable col-md-4 mb-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">SUM</h5>
+                            <h6>Piso: -1</h6>
+
+                        </div>
+                    </div>
+
                 </div>
-            </form>
+            </div>
+            
         </section>
-        
+    
         
         <section class="container cards">
             <!--aca cards unidades, reclamos o solicitudes desde base de datos-->
-            <div class="card" style="width: 18rem;" data-estado="ab">
-                <div class="card-body">
-                    <h5 class="card-title">ID:</h5>
-                    <h6>Unidad:</h6>
-                    <h6>Descripción</h6>
-                    <h6>Estado: Activo</h6>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;" data-estado="des">
-                <div class="card-body">
-                    <h5 class="card-title">ID:</h5>
-                    <h6>Unidad:</h6>
-                    <h6>Descripción</h6>
-                    <h6>Estado: Inactivo</h6>
-                </div>
-            </div>
+            
         </section>
     </main>
-    <script src="/demo/src/main/resources/script.js"></script>
+    <script src="../script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
